# VerifySyncAsync

./: .gitignore  LTL_Traslator.ml  Makefile  Pretty.ml  Promise.ml  README.md  ast.ml  ast.mli  clean  compile  dune  hip.ml  lexer.mll  parser.mly
BackEnd/: Rewriting.ml  sleek.ml
FrontEnd/: Forward.ml
JP/: Promise.ml  Promise_bk.ml
src/effects/: Any_1.ee  Basic_1_Concat.ee  Basic_2_Choice.ee  Basic_3_Kleen.ee  Mixed_1.ee  Mixed_2.ee  Mixed_3.ee  Wait_1.ee  test.ee
src/programs/: 0_emit.hh.js  0_test.hh.js  0_verview.hh.js  10_await.hh.js  1_loop.hh.js  1_yeild.hh.js  2_seq.hh.js  3_par.hh.js  4_present.hh.js  5_trap.hh.js  6_break.hh.js  7_loop.hh.js  8_abort.hh.js  9_async.hh.js
testJS/: client.js
